--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "banditeval"
-version = "0.0.1"
+version = "0.1.0"
 description = "On Speeding Up Language Model Evaluation"
 readme = "README.md"
 requires-python = ">=3.11"
